@@ -5,6 +5,7 @@ export(CA)
 export(citeL)
 export(CN)
 export(col2hex)
+export(css_style_change)
 export(css_styles)
 export(custom_css)
 export(CW)
